Dropshaddow on search

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<div class="site-title fixed bg-blue no-line-height top-0 left-0 z4 flex flex-column">
+<div class="site-title fixed bg-blue no-line-height top-0 left-0 z4 flex flex-column" style="filter: drop-shadow(2px 4px 6px #00264c)">
   <a class="m1" href="{{ site.baseurl }}/">
       {% include chowdown-logo-white.svg %}
     <h1 class="hide">{{ site.title }}</h1>
